--- a/style.css
+++ b/style.css
@@ -1,1 +1,118 @@
-This is the second
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
+    background-color: #1f2937;
+    color: white;
+}
+
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 60px;
+    padding: 10px 50px;
+}
+
+.heading-1 {
+    color: white;
+    font-size: 48px;
+    font-weight: 900;
+    margin-bottom: 20px;
+}
+
+.logo {
+    font-weight: 800;
+}
+
+.top-links {
+    display: flex;
+    gap: 30px;
+}
+
+.header-body {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 60px;
+    padding: 10px 50px;
+}
+
+.text-content {
+    text-align: left;
+    max-width: 60%;
+}
+
+.sign-up-button-1 {
+    color: white;
+    padding: 8px 22px;
+    background-color: #3882f6;
+    border-radius: 4px;
+    margin-left: 20px;
+    display: inline-block;
+}
+
+.image-placeholder img {
+    width: 200px;
+    height: auto;
+}
+
+.heading-2 {
+    color: #1f2937;
+    font-weight: bold;
+    padding: 10px 50px;
+}
+
+.main {
+    background-color: white;
+    padding: 10px 50px;
+    color: #1f2937;
+    margin: 0;
+    width: 100%;
+    text-align: center;
+}
+
+.quote {
+    color: #1f2937;
+    background-color: #E5E7EB;
+    font-size: 36px;
+    font-style: italic;
+    text-align: center;
+    max-width: 600px;
+    margin: 0 auto;
+    padding: 20px;
+}
+
+.quote-author {
+    color: black;
+    background-color: #E5E7EB;
+    padding-top: 10px;
+    padding-bottom: 30px;
+    text-align: center;
+}
+
+.heading-3 {
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding-top: 30px;
+}
+
+.sign-up-text {
+    background-color: white;
+    color: black;
+    text-align: center;
+    padding-bottom: 10px;
+}
+
+.sign-up-button-container {
+    color: white;
+    background-color: #3882f6;
+    padding: 8px 16px;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 75px;
+    margin: 0 auto;
+    text-align: center;
+}
